Stable for amd64, wrt bug #427544
Package-Manager: portage-2.1.11.9/cvs/Linux x86_64

--- a/net-libs/farsight2/ChangeLog
+++ b/net-libs/farsight2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/farsight2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/farsight2/ChangeLog,v 1.65 2012/10/03 15:40:01 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/farsight2/ChangeLog,v 1.66 2012/10/04 14:58:44 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> farsight2-0.0.31.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> farsight2-0.0.31.ebuild:
   x86 stable wrt bug #427544
