--- a/net-libs/gssdp/ChangeLog
+++ b/net-libs/gssdp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/gssdp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gssdp/ChangeLog,v 1.49 2012/10/03 15:40:47 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gssdp/ChangeLog,v 1.50 2012/10/04 14:59:30 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gssdp-0.12.1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gssdp-0.12.1.ebuild:
   x86 stable wrt bug #427544
