--- a/net-libs/libepc/ChangeLog
+++ b/net-libs/libepc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libepc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libepc/ChangeLog,v 1.7 2012/10/03 15:41:50 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libepc/ChangeLog,v 1.8 2012/10/04 15:00:20 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libepc-0.4.4.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libepc-0.4.4.ebuild:
   x86 stable wrt bug #427544
