--- a/net-libs/libsoup-gnome/ChangeLog
+++ b/net-libs/libsoup-gnome/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libsoup-gnome
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libsoup-gnome/ChangeLog,v 1.74 2012/10/03 15:42:16 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libsoup-gnome/ChangeLog,v 1.75 2012/10/04 15:00:51 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libsoup-gnome-2.38.1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   libsoup-gnome-2.38.1.ebuild:
