--- a/net-voip/telepathy-haze/ChangeLog
+++ b/net-voip/telepathy-haze/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-voip/telepathy-haze
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-haze/ChangeLog,v 1.32 2012/10/03 15:44:14 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-haze/ChangeLog,v 1.33 2012/10/04 15:02:46 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> telepathy-haze-0.6.0.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   telepathy-haze-0.6.0.ebuild:
