--- a/net-voip/telepathy-salut/ChangeLog
+++ b/net-voip/telepathy-salut/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-voip/telepathy-salut
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-salut/ChangeLog,v 1.40 2012/10/03 15:44:32 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-salut/ChangeLog,v 1.41 2012/10/04 15:03:00 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> telepathy-salut-0.8.0.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   telepathy-salut-0.8.0.ebuild:
