--- a/sys-apps/gnome-disk-utility/ChangeLog
+++ b/sys-apps/gnome-disk-utility/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/gnome-disk-utility
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gnome-disk-utility/ChangeLog,v 1.69 2012/10/03 15:44:55 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gnome-disk-utility/ChangeLog,v 1.70 2012/10/04 15:03:18 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  gnome-disk-utility-3.0.2-r201.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gnome-disk-utility-3.0.2-r201.ebuild:
