--- a/x11-libs/gnome-pty-helper/ChangeLog
+++ b/x11-libs/gnome-pty-helper/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/gnome-pty-helper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gnome-pty-helper/ChangeLog,v 1.15 2012/10/03 15:45:45 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gnome-pty-helper/ChangeLog,v 1.16 2012/10/04 15:04:06 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  gnome-pty-helper-0.32.2.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gnome-pty-helper-0.32.2.ebuild:
