--- a/x11-libs/gtkmathview/ChangeLog
+++ b/x11-libs/gtkmathview/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gtkmathview
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkmathview/ChangeLog,v 1.51 2012/10/03 15:47:02 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkmathview/ChangeLog,v 1.52 2012/10/04 15:04:50 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gtkmathview-0.8.0-r2.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gtkmathview-0.8.0-r2.ebuild:
