--- a/x11-libs/vte/ChangeLog
+++ b/x11-libs/vte/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/vte
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/vte/ChangeLog,v 1.334 2012/10/03 16:01:10 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/vte/ChangeLog,v 1.335 2012/10/04 15:06:02 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> vte-0.32.2.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> vte-0.32.2.ebuild:
   x86 stable wrt bug #427544
