--- a/x11-misc/colord/ChangeLog
+++ b/x11-misc/colord/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/colord
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/colord/ChangeLog,v 1.37 2012/10/03 16:01:45 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/colord/ChangeLog,v 1.38 2012/10/04 15:06:17 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> colord-0.1.21.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> colord-0.1.21.ebuild:
   x86 stable wrt bug #427544
