--- a/x11-themes/gnome-icon-theme/ChangeLog
+++ b/x11-themes/gnome-icon-theme/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/gnome-icon-theme
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme/ChangeLog,v 1.216 2012/10/03 16:02:37 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme/ChangeLog,v 1.217 2012/10/04 15:06:59 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gnome-icon-theme-3.4.0.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gnome-icon-theme-3.4.0.ebuild:
