--- a/x11-themes/light-themes/ChangeLog
+++ b/x11-themes/light-themes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/light-themes
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/light-themes/ChangeLog,v 1.14 2012/10/03 16:25:48 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/light-themes/ChangeLog,v 1.15 2012/10/04 15:07:37 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> light-themes-0.1.8.32.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   light-themes-0.1.8.32.ebuild:
