--- a/x11-themes/zukitwo/ChangeLog
+++ b/x11-themes/zukitwo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/zukitwo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/zukitwo/ChangeLog,v 1.13 2012/10/04 07:41:59 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/zukitwo/ChangeLog,v 1.14 2012/10/04 15:07:46 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> zukitwo-2012.07.02.ebuild:
+  Stable for amd64, wrt bug #427544
 
   04 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   zukitwo-2012.07.02.ebuild:
