--- a/x11-wm/sawfish/ChangeLog
+++ b/x11-wm/sawfish/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/sawfish
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/sawfish/ChangeLog,v 1.113 2012/10/04 07:07:42 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/sawfish/ChangeLog,v 1.114 2012/10/04 15:08:02 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> sawfish-1.9.0.ebuild:
+  Stable for amd64, wrt bug #427544
 
   04 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> sawfish-1.9.0.ebuild:
   x86 stable wrt bug #427544
