--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7005 2012/10/03 20:58:03 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7006 2012/10/04 16:22:00 hanno Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  04 Oct 2012; Hanno Boeck <hanno@gentoo.org> license_groups:
+  Re-add as-is to MISC-FREE - all packages having as-is that are not free
+  software should be considered as bugs.
 
   03 Oct 2012; Ulrich Müller <ulm@gentoo.org> license_groups:
   Add TeX-other-free to MISC-FREE license group, bug 436698.
