--- a/www-client/opera-next/ChangeLog
+++ b/www-client/opera-next/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/opera-next
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.132 2012/09/29 12:53:08 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.133 2012/10/04 16:45:25 jer Exp $
+
+*opera-next-12.10.1618 (04 Oct 2012)
+
+  04 Oct 2012; Jeroen Roovers <jer@gentoo.org> -opera-next-12.10.1612.ebuild,
+  -opera-next-12.10.1613.ebuild, +opera-next-12.10.1618.ebuild:
+  http://my.opera.com/desktopteam/blog/2012/10/04/the-snapshot-cycle-continues
 
 *opera-next-12.10.1615 (29 Sep 2012)
 
