--- a/net-analyzer/wireshark/ChangeLog
+++ b/net-analyzer/wireshark/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.406 2012/10/04 10:28:34 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.407 2012/10/04 16:46:21 jer Exp $
+
+  04 Oct 2012; Jeroen Roovers <jer@gentoo.org> wireshark-1.8.3.ebuild:
+  Stable for HPPA (bug #437026).
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> wireshark-1.8.3.ebuild:
   Stable for amd64, wrt bug #437026
