--- a/app-emulation/spice-protocol/ChangeLog
+++ b/app-emulation/spice-protocol/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/spice-protocol
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-protocol/ChangeLog,v 1.19 2012/09/23 08:31:27 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-protocol/ChangeLog,v 1.20 2012/10/04 16:47:40 cardoe Exp $
+
+*spice-protocol-0.12.2 (04 Oct 2012)
+
+  04 Oct 2012; Doug Goldstein <cardoe@gentoo.org>
+  +spice-protocol-0.12.2.ebuild:
+  Version bump
 
   23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   spice-protocol-0.10.1.ebuild:
