--- a/app-emulation/spice/ChangeLog
+++ b/app-emulation/spice/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-emulation/spice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice/ChangeLog,v 1.30 2012/09/23 08:31:54 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice/ChangeLog,v 1.31 2012/10/04 16:52:13 cardoe Exp $
+
+*spice-0.12.0 (04 Oct 2012)
+*spice-0.11.3 (04 Oct 2012)
+
+  04 Oct 2012; Doug Goldstein <cardoe@gentoo.org> +spice-0.11.3.ebuild,
+  +spice-0.12.0.ebuild:
+  Version bump
 
   23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> spice-0.10.0.ebuild:
   x86 stable wrt bug #407357
