--- a/app-emulation/spice-protocol/ChangeLog
+++ b/app-emulation/spice-protocol/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/spice-protocol
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-protocol/ChangeLog,v 1.20 2012/10/04 16:47:40 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-protocol/ChangeLog,v 1.21 2012/10/04 16:59:49 cardoe Exp $
+
+  04 Oct 2012; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  Add the virtualization herd so we see the bugs.
 
 *spice-protocol-0.12.2 (04 Oct 2012)
 
