--- a/app-emulation/spice/ChangeLog
+++ b/app-emulation/spice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/spice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice/ChangeLog,v 1.32 2012/10/04 16:58:12 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice/ChangeLog,v 1.33 2012/10/04 16:59:13 cardoe Exp $
+
+  04 Oct 2012; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  Add the virtualization herd so we see the bugs.
 
   04 Oct 2012; Doug Goldstein <cardoe@gentoo.org> spice-0.11.0.ebuild,
   spice-0.11.3.ebuild, spice-0.12.0.ebuild:
