--- a/www-client/elinks/ChangeLog
+++ b/www-client/elinks/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-client/elinks
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/elinks/ChangeLog,v 1.145 2012/09/16 11:06:11 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/elinks/ChangeLog,v 1.146 2012/10/04 17:12:35 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> elinks-0.12_pre5-r2.ebuild:
+  Stable for amd64, wrt bug #437196
 
   16 Sep 2012; Pacho Ramos <pacho@gentoo.org>
   +files/elinks-0.12_pre5-ruby-1.9.patch, elinks-0.12_pre5-r2.ebuild:
