--- a/media-video/gpac/ChangeLog
+++ b/media-video/gpac/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/gpac
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/gpac/ChangeLog,v 1.98 2012/02/21 21:42:25 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/gpac/ChangeLog,v 1.99 2012/10/04 17:12:59 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gpac-0.4.5-r5.ebuild:
+  Stable for amd64, wrt bug #437206
 
   21 Feb 2012; Alexis Ballier <aballier@gentoo.org> gpac-0.4.5-r5.ebuild:
   add a patch to build with ffmpeg git and remove write only variables in the
