--- a/dev-lang/spidermonkey/ChangeLog
+++ b/dev-lang/spidermonkey/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/spidermonkey
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.79 2012/10/03 15:09:51 djc Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.80 2012/10/04 17:13:22 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> spidermonkey-1.8.5-r1.ebuild:
+  Stable for amd64, wrt bug #436670
 
   03 Oct 2012; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
   Remove myself from the maintainers.
