--- a/net-analyzer/munin/files/munin-node_init.d_2.0.5
+++ b/net-analyzer/munin/files/munin-node_init.d_2.0.5
@@ -1,7 +1,7 @@
 #!/sbin/runscript
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/files/munin-node_init.d_2.0.5,v 1.5 2012/10/03 02:12:40 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/files/munin-node_init.d_2.0.5,v 1.6 2012/10/04 17:18:27 flameeyes Exp $
 
 get_munin_config() {
 	awk '$1 == "'$1'" { s=$2 } END { print s }' "$CFGFILE"
@@ -26,7 +26,7 @@ depend() {
 }
 
 start_pre() {
-    checkpath -o munin:munin -d $(dirname ${pidfile})
+    checkpath -d $(dirname ${pidfile})
 }
 
 reload() {
