--- a/www-client/google-chrome/ChangeLog
+++ b/www-client/google-chrome/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for www-client/google-chrome
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.200 2012/10/04 03:27:11 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.201 2012/10/04 17:37:52 floppym Exp $
+
+*google-chrome-23.0.1271.17_beta159779 (04 Oct 2012)
+
+  04 Oct 2012; Mike Gilbert <floppym@gentoo.org>
+  +google-chrome-23.0.1271.17_beta159779.ebuild,
+  -google-chrome-23.0.1271.10_beta158896.ebuild:
+  Beta channel bump.
 
   04 Oct 2012; Mike Gilbert <floppym@gentoo.org>
   google-chrome-23.0.1271.10_beta158896.ebuild:
