--- a/java-virtuals/servlet-api/ChangeLog
+++ b/java-virtuals/servlet-api/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for java-virtuals/servlet-api
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/java-virtuals/servlet-api/ChangeLog,v 1.42 2012/09/29 17:51:43 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/java-virtuals/servlet-api/ChangeLog,v 1.43 2012/10/04 17:40:04 sera Exp $
+
+  04 Oct 2012; Ralph Sennhauser <sera@gentoo.org> servlet-api-2.2.ebuild,
+  servlet-api-2.3.ebuild, servlet-api-2.4.ebuild, servlet-api-2.5.ebuild,
+  servlet-api-2.5-r1.ebuild, servlet-api-3.0-r1.ebuild:
+  Change license to public-domain. #426800
 
   29 Sep 2012; Fabian Groffen <grobian@gentoo.org> servlet-api-2.3.ebuild:
   Marked ~x64-macos
