--- a/java-virtuals/stax-api/ChangeLog
+++ b/java-virtuals/stax-api/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for java-virtuals/stax-api
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/java-virtuals/stax-api/ChangeLog,v 1.18 2012/09/29 18:07:35 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/java-virtuals/stax-api/ChangeLog,v 1.19 2012/10/04 17:40:49 sera Exp $
+
+  04 Oct 2012; Ralph Sennhauser <sera@gentoo.org> stax-api-1-r4.ebuild:
+  Change license to public-domain. #426800
 
   29 Sep 2012; Fabian Groffen <grobian@gentoo.org> stax-api-1-r4.ebuild:
   Marked ~x64-macos
