--- a/x11-misc/lightdm-gtk-greeter/ChangeLog
+++ b/x11-misc/lightdm-gtk-greeter/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/lightdm-gtk-greeter
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm-gtk-greeter/ChangeLog,v 1.9 2012/09/11 20:31:01 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm-gtk-greeter/ChangeLog,v 1.10 2012/10/04 18:28:57 hwoarang Exp $
+
+*lightdm-gtk-greeter-1.3.1-r1 (04 Oct 2012)
+  04 Oct 2012; Markos Chandras <hwoarang@gentoo.org>:
+  +lightdm-gtk-greeter-1.3.1-r1
+  Add new background for lightdm-gtk-greeter. Thanks to Markellos Orfanos
+  <m4rk@silverarrow.org>
 
 *lightdm-gtk-greeter-1.3.1 (11 Sep 2012)
 
