--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.725 2012/10/03 16:16:22 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.726 2012/10/04 19:08:36 floppym Exp $
+
+*chromium-23.0.1271.17 (04 Oct 2012)
+
+  04 Oct 2012; Mike Gilbert <floppym@gentoo.org> +chromium-23.0.1271.17.ebuild:
+  Beta channel bump.
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   chromium-22.0.1229.79.ebuild, chromium-22.0.1229.91.ebuild,
