--- a/sys-fs/udev/ChangeLog
+++ b/sys-fs/udev/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/udev
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.726 2012/10/01 17:35:25 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.727 2012/10/04 19:30:26 williamh Exp $
+
+*udev-194 (04 Oct 2012)
+
+  04 Oct 2012; William Hubbs <williamh@gentoo.org> +udev-194.ebuild,
+  udev-9999.ebuild:
+  version bump and sync live ebuild.
 
   01 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> udev-193.ebuild:
   Fix typo.
