--- a/sys-apps/systemd/ChangeLog
+++ b/sys-apps/systemd/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/systemd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.54 2012/09/30 22:20:03 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.55 2012/10/04 20:03:09 mgorny Exp $
+
+*systemd-194 (04 Oct 2012)
+
+  04 Oct 2012; Michał Górny <mgorny@gentoo.org> +systemd-194.ebuild:
+  Version bump.
 
 *systemd-193 (30 Sep 2012)
 
