--- a/www-servers/tornado/ChangeLog
+++ b/www-servers/tornado/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/tornado
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/tornado/ChangeLog,v 1.24 2012/08/19 02:42:47 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/tornado/ChangeLog,v 1.25 2012/10/04 20:04:11 xarthisius Exp $
+
+  04 Oct 2012; Kacper Kowalik <xarthisius@gentoo.org> tornado-2.3.ebuild:
+  Add prefix keywords
 
   19 Aug 2012; Mike Gilbert <floppym@gentoo.org> tornado-2.3.ebuild:
   Unrestrict python 3.2 and make pycurl an optional dependency.
