--- a/sys-apps/systemd/ChangeLog
+++ b/sys-apps/systemd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/systemd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.55 2012/10/04 20:03:09 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.56 2012/10/04 20:16:11 mgorny Exp $
+
+  04 Oct 2012; Michał Górny <mgorny@gentoo.org> systemd-194.ebuild:
+  Preserve empty directories, per bug #437008.
 
 *systemd-194 (04 Oct 2012)
 
