--- a/net-wireless/wifi-radar/ChangeLog
+++ b/net-wireless/wifi-radar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/wifi-radar
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/wifi-radar/ChangeLog,v 1.26 2012/10/03 04:08:10 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/wifi-radar/ChangeLog,v 1.27 2012/10/04 20:56:52 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> wifi-radar-2.0.8-r1.ebuild:
+  move sed to src_prepare
 
 *wifi-radar-2.0.8-r1 (03 Oct 2012)
 
