--- a/media-libs/portaudio/ChangeLog
+++ b/media-libs/portaudio/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/portaudio
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.91 2012/09/30 16:34:44 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.92 2012/10/04 21:34:10 ranger Exp $
+
+  04 Oct 2012; Brent Baude <ranger@gentoo.org> portaudio-19_pre20111121.ebuild:
+  Marking portaudio-19_pre20111121 ppc for bug 433982
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org>
   portaudio-19_pre20111121.ebuild:
