--- a/net-misc/mobile-broadband-provider-info/ChangeLog
+++ b/net-misc/mobile-broadband-provider-info/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/mobile-broadband-provider-info
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/mobile-broadband-provider-info/ChangeLog,v 1.15 2012/09/23 08:29:02 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/mobile-broadband-provider-info/ChangeLog,v 1.16 2012/10/04 21:38:34 ranger Exp $
+
+  04 Oct 2012; Brent Baude <ranger@gentoo.org>
+  mobile-broadband-provider-info-20120614.ebuild:
+  Marking mobile-broadband-provider-info-20120614 ppc for bug 429182
 
   23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   mobile-broadband-provider-info-20120614.ebuild:
