--- a/x11-misc/xfe/ChangeLog
+++ b/x11-misc/xfe/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xfe
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfe/ChangeLog,v 1.76 2012/10/03 12:52:24 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfe/ChangeLog,v 1.77 2012/10/04 21:39:23 ranger Exp $
+
+  04 Oct 2012; Brent Baude <ranger@gentoo.org> xfe-1.32.5.ebuild:
+  Marking xfe-1.32.5 ppc for bug 437014
 
   03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> xfe-1.32.5.ebuild:
   Stable for amd64, wrt bug #437014
