--- a/media-sound/quark/ChangeLog
+++ b/media-sound/quark/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/quark
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/quark/ChangeLog,v 1.22 2012/09/23 08:03:21 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/quark/ChangeLog,v 1.23 2012/10/04 21:40:11 ranger Exp $
+
+  04 Oct 2012; Brent Baude <ranger@gentoo.org> quark-3.24.ebuild:
+  Marking quark-3.24 ppc for bug 429138
 
   23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> quark-3.24.ebuild:
   x86 stable wrt bug #429138
