--- a/media-libs/phonon/ChangeLog
+++ b/media-libs/phonon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/phonon
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/phonon/ChangeLog,v 1.44 2012/09/29 18:33:05 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/phonon/ChangeLog,v 1.45 2012/10/04 21:41:50 naota Exp $
+
+  04 Oct 2012;  <naota@gentoo.org> phonon-4.6.0-r1.ebuild:
+  Add ~x86-fbsd wrt bug #432420
 
   29 Sep 2012; Fabian Groffen <grobian@gentoo.org> phonon-4.6.0-r1.ebuild:
   Fix for and keyworded ~{ppc,x86,x64}-macos
