--- a/x11-misc/xxkb/ChangeLog
+++ b/x11-misc/xxkb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xxkb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xxkb/ChangeLog,v 1.24 2012/09/19 09:18:11 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xxkb/ChangeLog,v 1.25 2012/10/04 21:41:54 ranger Exp $
+
+  04 Oct 2012; Brent Baude <ranger@gentoo.org> xxkb-1.11-r2.ebuild:
+  Marking xxkb-1.11-r2 ppc for bug 429242
 
   19 Sep 2012; Johannes Huber <johu@gentoo.org> xxkb-1.11-r2.ebuild:
   Stable for x86, wrt bug #429242
