--- a/net-print/lprng/ChangeLog
+++ b/net-print/lprng/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/lprng
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/lprng/ChangeLog,v 1.64 2012/09/19 14:01:15 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/lprng/ChangeLog,v 1.65 2012/10/04 21:43:30 ranger Exp $
+
+  04 Oct 2012; Brent Baude <ranger@gentoo.org> lprng-3.8.35-r1.ebuild:
+  Marking lprng-3.8.35-r1 ppc for bug 432488
 
   19 Sep 2012; Jeroen Roovers <jer@gentoo.org> lprng-3.8.35-r1.ebuild:
   Stable for HPPA (bug #432488).
