--- a/dev-python/twisted-conch/ChangeLog
+++ b/dev-python/twisted-conch/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/twisted-conch
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-conch/ChangeLog,v 1.81 2012/09/27 18:15:49 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-conch/ChangeLog,v 1.82 2012/10/05 14:45:03 marienz Exp $
+
+  05 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-conch-10.2.0.ebuild,
+  twisted-conch-11.0.0.ebuild:
+  Restrict pypy in twisted < 11.1.0 (bug #420653).
 
 *twisted-conch-12.2.0 (27 Sep 2012)
 
