--- a/dev-python/twisted-lore/ChangeLog
+++ b/dev-python/twisted-lore/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/twisted-lore
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-lore/ChangeLog,v 1.58 2012/09/27 18:16:07 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-lore/ChangeLog,v 1.59 2012/10/05 14:45:16 marienz Exp $
+
+  05 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-lore-10.2.0.ebuild,
+  twisted-lore-11.0.0.ebuild:
+  Restrict pypy in twisted < 11.1.0 (bug #420653).
 
 *twisted-lore-12.2.0 (27 Sep 2012)
 
