--- a/dev-python/twisted-names/ChangeLog
+++ b/dev-python/twisted-names/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/twisted-names
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-names/ChangeLog,v 1.67 2012/09/27 18:16:45 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-names/ChangeLog,v 1.68 2012/10/05 14:45:45 marienz Exp $
+
+  05 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-names-10.2.0.ebuild,
+  twisted-names-11.0.0.ebuild:
+  Restrict pypy in twisted < 11.1.0 (bug #420653).
 
 *twisted-names-12.2.0 (27 Sep 2012)
 
