--- a/dev-python/twisted-news/ChangeLog
+++ b/dev-python/twisted-news/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/twisted-news
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-news/ChangeLog,v 1.56 2012/09/27 18:17:04 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-news/ChangeLog,v 1.57 2012/10/05 14:45:58 marienz Exp $
+
+  05 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-news-10.2.0.ebuild,
+  twisted-news-11.0.0.ebuild:
+  Restrict pypy in twisted < 11.1.0 (bug #420653).
 
 *twisted-news-12.2.0 (27 Sep 2012)
 
