--- a/dev-python/twisted-runner/ChangeLog
+++ b/dev-python/twisted-runner/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/twisted-runner
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-runner/ChangeLog,v 1.58 2012/09/27 18:18:16 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-runner/ChangeLog,v 1.59 2012/10/05 14:46:17 marienz Exp $
+
+  05 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-runner-10.2.0.ebuild,
+  twisted-runner-11.0.0.ebuild:
+  Restrict pypy in twisted < 11.1.0 (bug #420653).
 
 *twisted-runner-12.2.0 (27 Sep 2012)
 
