--- a/dev-python/twisted-web/ChangeLog
+++ b/dev-python/twisted-web/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/twisted-web
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-web/ChangeLog,v 1.79 2012/09/27 18:18:35 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-web/ChangeLog,v 1.80 2012/10/05 14:46:31 marienz Exp $
+
+  05 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-web-10.2.0.ebuild,
+  twisted-web-11.0.0.ebuild:
+  Restrict pypy in twisted < 11.1.0 (bug #420653).
 
 *twisted-web-12.2.0 (27 Sep 2012)
 
