--- a/dev-python/twisted-words/ChangeLog
+++ b/dev-python/twisted-words/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/twisted-words
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-words/ChangeLog,v 1.74 2012/09/27 18:18:54 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-words/ChangeLog,v 1.75 2012/10/05 14:46:45 marienz Exp $
+
+  05 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-words-10.2.0-r1.ebuild,
+  twisted-words-11.0.0.ebuild:
+  Restrict pypy in twisted < 11.1.0 (bug #420653).
 
 *twisted-words-12.2.0 (27 Sep 2012)
 
