arm stable, bug #427544
Package-Manager: portage-2.1.11.23/cvs/Linux x86_64

--- a/media-fonts/cantarell/ChangeLog
+++ b/media-fonts/cantarell/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/cantarell
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/cantarell/ChangeLog,v 1.22 2012/10/04 14:55:45 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/cantarell/ChangeLog,v 1.23 2012/10/06 09:28:03 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> cantarell-0.0.9.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> cantarell-0.0.9.ebuild:
   Stable for amd64, wrt bug #427544
