--- a/net-libs/farstream/ChangeLog
+++ b/net-libs/farstream/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/farstream
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/farstream/ChangeLog,v 1.7 2012/10/04 14:58:58 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/farstream/ChangeLog,v 1.8 2012/10/06 09:40:02 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> farstream-0.1.2-r1.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> farstream-0.1.2-r1.ebuild:
   Stable for amd64, wrt bug #427544
