--- a/net-libs/glib-networking/ChangeLog
+++ b/net-libs/glib-networking/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/glib-networking
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/glib-networking/ChangeLog,v 1.48 2012/10/04 14:59:14 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/glib-networking/ChangeLog,v 1.49 2012/10/06 09:41:08 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> glib-networking-2.32.3.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> glib-networking-2.32.3.ebuild:
   Stable for amd64, wrt bug #427544
