--- a/net-libs/libnice/ChangeLog
+++ b/net-libs/libnice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libnice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnice/ChangeLog,v 1.37 2012/10/04 15:00:34 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnice/ChangeLog,v 1.38 2012/10/06 09:39:03 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> libnice-0.1.2.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libnice-0.1.2.ebuild:
   Stable for amd64, wrt bug #427544
