--- a/net-libs/telepathy-glib/ChangeLog
+++ b/net-libs/telepathy-glib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/telepathy-glib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-glib/ChangeLog,v 1.118 2012/10/04 15:01:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-glib/ChangeLog,v 1.119 2012/10/06 09:45:34 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> telepathy-glib-0.18.1.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> telepathy-glib-0.18.1.ebuild:
   Stable for amd64, wrt bug #427544
