--- a/net-libs/webkit-gtk/ChangeLog
+++ b/net-libs/webkit-gtk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/webkit-gtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.176 2012/10/04 17:42:59 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.177 2012/10/06 09:50:30 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> webkit-gtk-1.8.3-r300.ebuild:
+  arm stable, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> webkit-gtk-1.8.3-r300.ebuild:
   Stable for AMD64, wrt bug #427544
